--- a/minhasviagem/src/main/resources/application.properties
+++ b/minhasviagem/src/main/resources/application.properties
@@ -12,5 +12,6 @@ spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 
 
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
