--- a/minhasviagem/src/main/resources/application.properties
+++ b/minhasviagem/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=minhasviagem
+spring.application.name=minhasviagens
 #Altera a estrutura da tabela caso a entidade tenha mudaças.
 spring.jpa.hibernate.ddl-auto=update
 
